feat(taro): 通过scale参数缩放布局，样式代码转移到tomato项目中

--- a/packages/taro-components/src/components/picker/style/index.scss
+++ b/packages/taro-components/src/components/picker/style/index.scss
@@ -1,27 +1,27 @@
-$hd: 0.5;
+// $hd: 0.5;
 
-.weui-picker {
-    font-size: .6rem * $hd;
-    .weui-picker__hd {
-        font-size: .7rem * $hd;
-        padding: .3rem * $hd .45rem * $hd;
-      }
-      .weui-picker__bd {
-        font-size: .6rem * $hd;
-        height: 11.9rem * $hd;
+// .weui-picker {
+//     font-size: .6rem * $hd;
+//     .weui-picker__hd {
+//         font-size: .7rem * $hd;
+//         padding: .3rem * $hd .45rem * $hd;
+//       }
+//       .weui-picker__bd {
+//         font-size: .6rem * $hd;
+//         height: 11.9rem * $hd;
     
-        .weui-picker__indicator {
-          height: 1.7rem * $hd;
-          top: 5.1rem * $hd;
-        }
+//         .weui-picker__indicator {
+//           height: 1.7rem * $hd;
+//           top: 5.1rem * $hd;
+//         }
     
-        .weui-picker__item {
-          height: 1.7rem * $hd;
-          line-height: 1.7rem * $hd;
-        }
+//         .weui-picker__item {
+//           height: 1.7rem * $hd;
+//           line-height: 1.7rem * $hd;
+//         }
     
-        .weui-picker__mask {
-          background-size: 100% 5.1rem * $hd;
-        }
-      }
-}
+//         .weui-picker__mask {
+//           background-size: 100% 5.1rem * $hd;
+//         }
+//       }
+// }
